--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,12 @@
 
 <title>{{ page.title }} &middot; Bootstrap Form Helpers</title>
 
+<meta property="og:title" content="{{ page.title }} &middot; Bootstrap Form Helpers" />
+<meta property="og:type" content="website" />
+<meta property="og:site_name" content="Bootstrap Form Helpers" />
+<meta property="og:image" content="http://bootstrapformhelpers/assets/img/logo.png" />
+<meta property="og:url" content="http://bootstrapformhelpers/" />
+
 <link rel="canonical" href="http://bootstrapformhelpers.com{{ page.seo_url }}"/>
 
 <!-- Bootstrap core CSS -->
@@ -19,6 +25,8 @@
   <script src="{{ page.base_url }}assets/js/html5shiv.js"></script>
   <script src="{{ page.base_url }}assets/js/respond.min.js"></script>
 <![endif]-->
+
+<link rel="shortcut icon" href="{{ page.base_url }}assets/img/favicon.png">
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
