--- a/_includes/nav-main.html
+++ b/_includes/nav-main.html
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">Bootstrap Form Helpers</a>
+    <a style="height:32px;margin-top:-6px;" class="navbar-brand" href="#"><img style="width:32px;height:32px;" src="{{ page.base_url }}assets/img/logo.png" alt="jQuery Plugins - Bootstrap Form Helpers" class="img-circle"> Bootstrap Form Helpers</a>
   </div>
   
   <!-- Collect the nav links, forms, and other content for toggling -->
