--- a/_includes/social-main.html
+++ b/_includes/social-main.html
@@ -7,17 +7,25 @@
 	  <li>
 		<iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=vlamanna&amp;repo=BootstrapFormHelpers&amp;type=fork&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" style="width: 98px; height: 20px;"></iframe>
 	  </li>
-	  <li class="addthis">
-		<!-- AddThis Button BEGIN -->
-		<div class="addthis_toolbox addthis_default_style ">
-		<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
-		<a class="addthis_button_tweet"></a>
-		<a class="addthis_button_pinterest_pinit"></a>
-		<a class="addthis_counter addthis_pill_style"></a>
-		</div>
-		<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
-		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4df14df26c87e5bd"></script>
-		<!-- AddThis Button END -->
+	  <li>
+	    <iframe src="//www.facebook.com/plugins/follow.php?href=http%3A%2F%2Fwww.facebook.com%2Fbootstrapfh&amp;width&amp;height=21&amp;colorscheme=light&amp;layout=button_count&amp;show_faces=false&amp;appId=177800958940830" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width: 100px; height:20px;" allowTransparency="true"></iframe>
+	  </li>
+	  <li>
+	    <a href="https://twitter.com/bootstrapfh" class="twitter-follow-button" data-show-count="false">Follow @bootstrapfh</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+	  </li>
+	  <li>
+		<!-- Place this tag where you want the widget to render. -->
+		<div class="g-follow" data-annotation="bubble" data-height="20" data-href="//plus.google.com/107189435276709055003" data-rel="publisher"></div>
+
+		<!-- Place this tag after the last widget tag. -->
+		<script type="text/javascript">
+		  (function() {
+			var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+			po.src = 'https://apis.google.com/js/plusone.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+		  })();
+		</script>
 	  </li>
 	</ul>
   </div>
