--- a/_includes/nav-plugins.html
+++ b/_includes/nav-plugins.html
@@ -1,6 +1,7 @@
 <li><a href="{{ page.base_url }}#jquery-plugins">Overview</a></li>
 <li><a href="{{ page.base_url }}gettingstarted/#jquery-plugins">Getting Started</a></li>
 <li><a href="{{ page.base_url }}select/#jquery-plugins">Select</a></li>
+<li><a href="{{ page.base_url }}colorpicker/#jquery-plugins">Color Picker</a></li>
 <li><a href="{{ page.base_url }}datepicker/#jquery-plugins">Date Picker</a></li>
 <li><a href="{{ page.base_url }}timepicker/#jquery-plugins">Time Picker</a></li>
 <li><a href="{{ page.base_url }}slider/#jquery-plugins">Slider</a></li>
