--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,3 @@
-
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
@@ -13,7 +12,7 @@
   addthis.layers({
     'theme' : 'light',
     'share' : {
-      'position' : 'right',
+      'position' : 'left',
       'numPreferredServices' : 5
     }   
   });
