--- a/_includes/ads-skyscraper.html
+++ b/_includes/ads-skyscraper.html
@@ -1,13 +1,9 @@
-<div class="visible-lg visible-md" style="border: 1px solid #eee; padding: 20px; text-align: center; height: 640px;">
-  <script type="text/javascript"><!--
-  google_ad_client = "ca-pub-1024496565678366";
-  /* BootstrapSky */
-  google_ad_slot = "5761729320";
-  google_ad_width = 160;
-  google_ad_height = 600;
-  //-->
-  </script>
-  <script type="text/javascript"
-  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-  </script>
-</div>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- SkyScraper-160x600 -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:160px;height:600px"
+     data-ad-client="ca-pub-6835174711968682"
+     data-ad-slot="3007714843"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
