--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,20 +33,13 @@
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-47807801-1', 'bootstrapformhelpers.com');
-  ga('send', 'pageview');
-
-</script>
-
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-45105464-1', 'bootstrapformhelpers.com');
-  ga('send', 'pageview');
+            
+            // BP
+            ga('create', 'UA-45105464-1', 'bootstrapformhelpers.com');
+            // WLTD
+            ga('create', 'UA-47807801-1', 'bootstrapformhelpers.com', {'name': 'winMarkLTD'}); 
+            ga('send', 'pageview');
+            ga('winMarkLTD.send', 'pageview');
 
 </script>
+
