--- a/_includes/jumbotron-main.html
+++ b/_includes/jumbotron-main.html
@@ -3,7 +3,7 @@
     <h2>Bootstrap Form Helpers</h2>
     <p class="lead">Extend Bootstrap — now with 15 custom jQuery plugins.</p>
     <p><a href="{{ page.base_url }}buy/" onclick="ga('send', 'event', 'button', 'click', 'buy');" class="btn btn-success btn-lg">Buy Now</a></p>
-    <p style="color: #ececec;"> or <a href="https://github.com/vlamanna/BootstrapFormHelpers/zipball/master" onclick="ga('send', 'event', 'button', 'click', 'download');" class="btn btn-default btn-lg">Download</a></p>
+    <p style="color: #ececec;"> or <a href="http://bootstrapformhelpers.com/freedownload/" onclick="ga('send', 'event', 'button', 'click', 'download');" class="btn btn-default btn-lg">Download</a></p>
     <ul class="masthead-links">
 	  <li><a href="https://github.com/vlamanna/BootstrapFormHelpers" onclick="ga('send', 'event', 'button', 'click', 'source');">GitHub project</a></li>
 	  <li>Version 2.3.0</li>
